[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tileset/sheet.png" type="Texture" id=1]
[ext_resource path="res://ladder/Ladder.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.00867, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 112, 80, 16, 16 )

[node name="Ladder_collision" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
ladder_scale = 2

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Ladder_collision_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ladder_collision_body_exited"]
